src/test/resources/rules/fail/SystemOutUsage.java
package rules.fail;

public class SystemOutUsage {
    public void method() {
        System.out.println("This is forbidden!");
    }
}